--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css//projects.css" />
     <link rel="stylesheet" href="./css/choose.css" />
     <link rel="stylesheet" href="./css/history.css" />
+    <link rel="stylesheet" href="./css/professionals.css" />
     <title>Lesson 9</title>
   </head>
   <body>
@@ -211,7 +212,42 @@
     </section>
 
     <section class="professionals">
-      
+      <div class="prof-content">
+        <div class="prof-content-label">
+          <p>Our Professionals</p>
+          <a href="#">View All team</a>
+        </div>
+        <div class="prof-cards">
+          <div class="prof-item">
+            <img class="avatar" src="./css/image/team-1-115x119.jpg" alt="">
+            <p class="name">Sam Wilson</p>
+            <p class="position">Founder, CEO</p>
+            <a href="#" class="mail">info@demolink.org</a>
+          </div>
+
+          <div class="prof-item">
+            <img class="avatar" src="./css/image/team-1-115x119.jpg" alt="">
+            <p class="name">Sam Wilson</p>
+            <p class="position">Founder, CEO</p>
+            <a href="#" class="mail">info@demolink.org</a>
+          </div>
+
+          <div class="prof-item">
+            <img class="avatar" src="./css/image/team-1-115x119.jpg" alt="">
+            <p class="name">Sam Wilson</p>
+            <p class="position">Founder, CEO</p>
+            <a href="#" class="mail">info@demolink.org</a>
+          </div>
+
+          <div class="prof-item">
+            <img class="avatar" src="./css/image/team-1-115x119.jpg" alt="">
+            <p class="name">Sam Wilson</p>
+            <p class="position">Founder, CEO</p>
+            <a href="#" class="mail">info@demolink.org</a>
+          </div>
+        </div>
+      </div>
+
     </section>
   </body>
 </html>
